# grove

./: .gitignore  .oxfmtrc.json  AGENTS.md  CLAUDE.md  README.md  check-docs.config.json  design.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vite.config.ts
.claude/: settings.json
.codex/: hooks.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: desktop.json
apps/desktop/src-tauri/migrations/: 20260615000000_backend_foundation.sql  20260618000000_operation_workflow_settings.sql
apps/desktop/src-tauri/src/: app_state.rs  commands.rs  e2e_tests.rs  lib.rs  tray_icon.rs
apps/desktop/src-tauri/src/presentation/: mod.rs
apps/desktop/src-tauri/src/shared/: mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260617000000_app_settings.sql  20260618010000_app_language_setting.sql
src-tauri/src/: app_state.rs  commands.rs  e2e_tests.rs  lib.rs  main.rs  positioning.rs  tray.rs  tray_icon.rs  window.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/conductor/: mod.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/conductor/: config_repository.rs
src-tauri/src/infrastructure/db/: connection.rs
src-tauri/src/infrastructure/filesystem/: file_copy.rs
src-tauri/src/infrastructure/git/: mod.rs  status_repository.rs  worktree_repository.rs
src-tauri/src/infrastructure/native/: opener.rs
src-tauri/src/presentation/commands/: mod.rs  operations.rs  projects.rs  settings.rs  workspaces.rs
src-tauri/src/shared/dto/: conductor.rs  errors.rs  mod.rs  operations.rs  projects.rs  settings.rs  workspaces.rs
src-tauri/src/use_cases/: mod.rs
src-tauri/src/use_cases/projects/: create_project.rs  import_conductor_projects.rs  list_worktree_projects.rs  mod.rs  remove_project.rs  update_project_settings.rs
src-tauri/src/use_cases/settings/: update_app_settings.rs
src-tauri/src/use_cases/workspaces/: archive_workspace.rs  create_workspace.rs  mod.rs  open_workspace.rs  refresh_project.rs  retry_workspace_operation.rs
(+245 files in other folders)
