[package]
name = "tauri-tray"
version = "0.1.0"
description = "A blank Tauri tray app"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSColor", "NSWindow"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSKeyValueCoding", "NSString", "NSValue"] }
objc2-web-kit = { version = "0.3.2", default-features = false, features = ["WKWebView"] }
