[package]
name = "tauri-tray"
version = "0.2.1"
description = "A blank Tauri tray app"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-typescript = "0.0.12"
sqlx = { version = "0.8", features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite"] }
tauri = { version = "2", features = ["macos-private-api", "specta", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-specta = { version = "2.0.0-rc.25", features = ["typescript"] }
thiserror = "2"
toml = "0.9"
tauri-plugin-process = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSColor", "NSWindow"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSKeyValueCoding", "NSString", "NSValue"] }
objc2-web-kit = { version = "0.3.2", default-features = false, features = ["WKWebView"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
